apps/kub-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kub-app-service
  namespace: kub-app
  labels:
    app: kub-app
spec:
  selector:
    app: kub-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
