apps/kub-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kub-app-ingress
  namespace: kub-app
  labels:
    app: kub-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: kub-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kub-app-service
            port:
              number: 80
